objects/Approval_History__c.object
<CustomObject>
    <description>Used to track custom approval for Item Update records.</description>
    <fields>
        <fullName>Approval_Comments__c</fullName>
        <label>Approval Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Approval_Department__c</fullName>
        <label>Approval Department</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Brand Manager</fullName>
                </value>
                <value>
                    <fullName>Executive</fullName>
                </value>
                <value>
                    <fullName>Compliance</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>Accounting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approval_Response__c</fullName>
        <label>Approval Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Approval_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approval_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Item_Update_Link__c</fullName>
        <formula>LEFT($Api.Enterprise_Server_URL_300, FIND(&apos;/services&apos;,$Api.Enterprise_Server_URL_300)) +  Item_Update__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Item Update Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Update__c</fullName>
        <label>Item Update</label>
        <referenceTo>Item_Update__c</referenceTo>
        <relationshipLabel>Approval History</relationshipLabel>
        <relationshipName>Approval_Histories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item</label>
        <referenceTo>Item__c</referenceTo>
        <relationshipLabel>Item Update Approval History</relationshipLabel>
        <relationshipName>Approval_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Submitted_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submitted By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approval_Request_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Approval History</label>
    <nameField>
        <label>Approval History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Approval History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>